# logos-blockchain

./: .cargo-deny.toml  .dockerignore  .env.devnet  .env.example  .env.playground  .env.testnet  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  compose.devnet.run.yml  compose.devnet.setup.yml  compose.run.yml  compose.setup.yml  compose.static.yml  compose.yml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
blend/core/: Cargo.toml
blend/core/src/: lib.rs
blend/crypto/: Cargo.toml
blend/crypto/src/: cipher.rs  lib.rs  merkle.rs
blend/message/: Cargo.toml
blend/message/src/: error.rs  input.rs  lib.rs
blend/message/src/crypto/: domains.rs  key_ext.rs  mod.rs  proofs.rs
blend/message/src/encap/: decapsulated.rs  encapsulated.rs  mod.rs  tests.rs  validated.rs
blend/message/src/message/: blending_header.rs  payload.rs  public_header.rs
blend/message/src/reward/: activity.rs  mod.rs  session.rs  token.rs
blend/network/: Cargo.toml
blend/network/src/: lib.rs
blend/network/src/core/: mod.rs
blend/proofs/: Cargo.toml
blend/proofs/src/: lib.rs
blend/proofs/src/quota/: fixtures.rs  mod.rs  serde.rs  tests.rs
blend/proofs/src/selection/: inputs.rs  mod.rs  tests.rs
blend/scheduling/: Cargo.toml
blend/scheduling/src/: cover_traffic.rs  lib.rs  membership.rs  release_delayer.rs  session.rs
blend/scheduling/src/message_blend/: mod.rs
blend/scheduling/src/message_scheduler/: mod.rs  round_info.rs  tests.rs
bundler/: Cargo.toml  README.md
bundler/logos-blockchain-node/: bundle.rs
bundler/src/: utils.rs
c-bindings/: Cargo.toml  build.rs  cbindgen.toml  lib_logos_blockchain.h
c-bindings/src/: callbacks.rs  errors.rs  lib.rs  macros.rs  node.rs  result.rs
c-bindings/src/api/: blend.rs  config.rs  cryptarchia.rs  lifecycle.rs  memory.rs  mod.rs  result.rs  sdp.rs  storage.rs  subscriptions.rs  wallet.rs
c-bindings/src/api/types/: block.rs  config.rs  known_addresses.rs  mod.rs  value.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmds/: executor.rs  mod.rs  validator.rs
consensus/cryptarchia-engine/: Cargo.toml
consensus/cryptarchia-engine/src/: config.rs  lib.rs  time.rs
consensus/cryptarchia-sync/: Cargo.toml
consensus/cryptarchia-sync/src/: config.rs  lib.rs  messages.rs
consensus/cryptarchia-sync/src/libp2p/: behaviour.rs  downloader.rs  errors.rs  messages.rs  packing.rs  provider.rs
core/: Cargo.toml
core/benches/: mantle_tx_components.rs
core/src/: crypto.rs  lib.rs  limits.rs
core/src/blend/: mod.rs
core/src/block/: deser.rs  genesis.rs  mod.rs
core/src/codec/bincode/: mod.rs
core/src/da/: mod.rs
core/src/header/: mod.rs
core/src/mantle/: channel.rs  encoding.rs  gas.rs  genesis_tx.rs  ledger.rs  mock.rs  mod.rs  tx.rs  tx_builder.rs
core/src/mantle/ops/: internal.rs  leader_claim.rs  mod.rs  opcode.rs  transfer.rs
core/src/proofs/: channel_multi_sig_proof.rs  channel_withdraw_proof.rs  leader_claim_proof.rs  leader_proof.rs  merkle.rs  mod.rs
core/src/sdp/: blend.rs  da.rs  locked_notes.rs  mod.rs
core/src/utils/: merkle.rs  mod.rs
da/kzgrs-backend/: Cargo.toml
da/kzgrs-backend/benches/: encoder.rs  reconstruct.rs  verifier.rs
da/kzgrs-backend/src/: dispersal.rs  encoder.rs  kzg_keys.rs  lib.rs  reconstruction.rs  verifier.rs
da/kzgrs-backend/src/common/: mod.rs  share.rs
da/kzgrs-backend/src/testutils/: blob.rs
kms/keys/: Cargo.toml
kms/keys/src/: lib.rs
kms/keys/src/keys/: errors.rs  mod.rs  secured_key.rs
kms/keys/src/operators/: mod.rs
kms/macros/: Cargo.toml
kms/macros/src/: lib.rs
kms/operators/: Cargo.toml
kms/operators/src/: lib.rs
ledger/: Cargo.toml
ledger/src/: config.rs  lib.rs  utils.rs
ledger/src/cryptarchia/: block_density.rs  mod.rs  stake.rs
ledger/src/mantle/: channel.rs  helpers.rs  leader.rs  mod.rs
libp2p/: Cargo.toml
libp2p/src/: lib.rs  protocol_name.rs  swarm.rs
libp2p/src/behaviour/: mod.rs
libp2p/src/config/: gossipsub.rs  identify.rs  kademlia.rs  mod.rs
mmr/: Cargo.toml
mmr/src/: lib.rs  path.rs
nodes/api-common/: Cargo.toml
nodes/api-common/src/: lib.rs  metrics.rs  paths.rs  settings.rs
nomos-c/: Cargo.toml
nomos-c/src/: lib.rs
nomos-c/src/api/: subscriptions.rs
services/api/: Cargo.toml
services/api/src/: lib.rs
services/api/tests/: todo.rs
tests/: Cargo.toml  README.md
tests/benches/: voucher.rs
tests/cucumber_tests/: cucumber.rs
tests/cucumber_tests/features/: api-cli.feature  blend.feature  cryptarchia.feature  local_idle_smoke.feature  manual_control.feature  smoke.feature  test_harness.feature  transactions.feature
tests/cucumber_tests/features_k8s/: k8s_manual_cluster.feature  k8s_manual_transactions.feature
tests/cucumber_tests/stand_alone_tests/: cucumber_smoke_k8s.rs  cucumber_smoke_local.rs
tests/src/: lib.rs
tests/src/benchmarks/: eddsa.rs
tests/src/common/: chain.rs  da.rs  kms.rs  mantle_inscription.rs  mantle_tx.rs  manual_cluster.rs  mod.rs  sync.rs  time.rs  wallet.rs
tests/src/cucumber/: defaults.rs  error.rs  fee_reserve.rs  mod.rs  utils.rs  world.rs
tests/src/nodes/: executor.rs  mod.rs  validator.rs
tests/src/topology/: mod.rs
tests/testing_framework/: Cargo.toml
tests/testing_framework/src/: diagnostics.rs  env.rs  lib.rs  unique_persistent.rs
tracing/: Cargo.toml
tracing/src/: compressed_appender.rs  lib.rs
tracing/src/filter/: envfilter.rs
tracing/src/logging/: local.rs  mod.rs  otlp.rs
tracing/src/metrics/: emit.rs  mod.rs  otlp.rs
tracing/src/tracing/: otlp.rs
tracing/targets/: Cargo.toml
tracing/targets/macros/: Cargo.toml
tracing/targets/src/: blend.rs  lib.rs
utils/: Cargo.toml
utils/src/: bounded_duration.rs  lib.rs  math.rs  types.rs  yaml.rs
utils/src/tokio/: stream.rs
utxotree/: Cargo.toml
utxotree/src/: lib.rs  merkle.rs  test_fr.rs
wallet/: Cargo.toml
wallet-http-client/: Cargo.toml
wallet-http-client/src/: lib.rs
wallet/src/: error.rs  lib.rs  voucher.rs
zone-sdk/: Cargo.toml
zone-sdk/src/: adapter.rs  indexer.rs  lib.rs  sequencer.rs  state.rs
(+822 files in other folders)
